Revert "DFR-2123: Resolve critical, major and minor issues (#1082)"
This reverts commit ffbf1f30eff875c8f831d3b46ce562d44945971d.